@@ -1,6 +1,9 @@
 #!/usr/bin/env python
 import os.path, time, os, sys, re, threading, StringIO, pango, string
-import Image
+try:
+    from PIL import Image
+except ImportError:
+    import Image
 import gtk, gobject, gtk.gdk, traceback
 import batchEditor
 import recipeManager
